examples/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remote-cache
  labels:
    app: remote-cache
spec:
  replicas: 3
  selector:
    matchLabels:
      app: remote-cache
  template:
    metadata:
      labels:
        app: remote-cache
    spec:
      containers:
      - name: remote-cache
        image: salamaashoush/turbo-remote-cache-rs
        command: ["turbo-remote-cache-rs"]
        resources:
          limits:
            memory: 2Gi
            cpu: "2"
          requests:
            memory: 1Gi
            cpu: "1"
        # ports:
        # - containerPort: 4000
        #   name: web
        #   protocol: TCP
        readinessProbe:
          httpGet:
            port: 4000
            path: /v8/artifacts/status
        volumeMounts:
        - name: remote-cache-volume
          mountPath: /tmp/remote-cache
      volumes:
      - name: remote-cache-volume
        persistentVolumeClaim:
          claimName: remote-cache-pvc
