examples/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remote-cache-service
  labels:
    app: remote-cache
spec:
  type: ClusterIP
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: remote-cache
