examples/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-cache-ingress
  annotations:
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      # - path: /cache(/|$)(.*)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: remote-cache-service
            port:
              number: 4000
